src/test/ui/consts/const-eval/borrowck_error_no_ice.stderr
error[E0381]: use of possibly-uninitialized variable: `x`
  --> $DIR/borrowck_error_no_ice.rs:4:9
   |
LL |         x
   |         ^ use of possibly-uninitialized `x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
