src/test/ui/consts/const-eval/borrowck_error_no_ice.rs
struct Bug {
    A: [(); {
        let x;
        x
        //~^ error: use of possibly-uninitialized variable
    }],
}

fn main() {}
